github_data_collector/src/data/issue_comment/SwiftyJSON_SwiftyJSON.txt
There is a json file having ____ in a value like "question": "11 ____________" Swifty-json is not able to parse and throwing error The data couldn’t be read because it isn’t in the correct format. Is there any way to handle such situation?

Screenshot for json validation -

![Screenshot 2020-01-02 at 5 59 28 PM](https://user-images.githubusercontent.com/31763527/71708383-f69f1380-2e16-11ea-8d8c-47962e6a7fa5.png)

[https://stackoverflow.com/questions/59562932/swifty-json-unable-to-parse-underscore](url)
### What did you do?

I tried to make a build after rebasing to a new commit and sometimes I fell into a hole where I cannot build, I tried different solutions and sometimes it solves the issue, but now I am really stuck and nothing helped.

### Xcode presented errors

Unable to install "$(PRODUCT_MODULE_NAME)"

Or

Could not install at this time.
Failed to load Info.plist from bundle at path /Users/$(USER_NAME)"/Library/Developer/CoreSimulator/Devices/$(DEVICE_ID)/data/Library/Caches/com.apple.mobile.installd.staging/temp.StZ3Rp/extracted/$(PRODUCT_MODULE_NAME).app/Frameworks/**SwiftyJSON.framework**; Extra info about plist: ACL=<not found> 

Or

The app is malformed. The file at "$(PRODUCT_MODULE_NAME).app/Frameworks/SwiftyJSON.framework/Info.plist" is missing. Frameworks must be valid bundles with an Info.plist.
[StarOverflow](https://stackoverflow.com/questions/58871801/xcode11-unable-to-install-appname/58875456#58875456)

### Environment

 - SwiftyJSON: *5.0.0*
 - Xcode Version: *11.2 (11B52)* / *11.3 (11C29)*
 - Swift Version: *5.0*
 - Cocoapods: *1.8.4*

### Logs

`Wed Nov 27 10:21:27 2019 [918] <notice> (0x16f3ef000) -[MIClientConnection installURL:withOptions:completion:]: Running installation as QOS_CLASS_USER_INITIATED
Wed Nov 27 10:21:27 2019 [918] <notice> (0x16f3ef000) -[MIClientConnection _doInstallationForURL:withOptions:completion:]: Install of "/var/mobile/Media/PublicStaging/$(PRODUCT_MODULE_NAME).app" type Developer (LSInstallType = (null)) requested by lsd (pid 94)
Wed Nov 27 10:21:27 2019 [918] <notice> (0x16f3ef000) -[MIInstaller performInstallationWithError:]: Installing <MIInstallableBundle ID=space.$(PRODUCT_MODULE_NAME).ios; Version=214, ShortVersion=1.0.0>
Wed Nov 27 10:21:27 2019 [918] <err> (0x16f3ef000) -[MIBundle infoPlistSubset]: Info.plist loaded from /private/var/installd/Library/Caches/com.apple.mobile.installd.staging/temp.kAmQY5/extracted/$(PRODUCT_MODULE_NAME).app/Frameworks/SwiftyJSON.framework had no keys!
Wed Nov 27 10:21:27 2019 [918] <err> (0x16f3ef000) -[MIBundle _extraInfoPlistLogging]: Couldn't stat /private/var/installd/Library/Caches/com.apple.mobile.installd.staging/temp.kAmQY5/extracted/$(PRODUCT_MODULE_NAME).app/Frameworks/SwiftyJSON.framework/Info.plist: No such file or directory
Wed Nov 27 10:21:27 2019 [918] <err> (0x16f3ef000) -[MIBundle _extraInfoPlistLogging]: Failed to get bytes at beginning of /private/var/installd/Library/Caches/com.apple.mobile.installd.staging/temp.kAmQY5/extracted/$(PRODUCT_MODULE_NAME).app/Frameworks/SwiftyJSON.framework/Info.plist: Error Domain=NSCocoaErrorDomain Code=4 "The file “Info.plist” doesn’t exist." UserInfo={NSFilePath=/private/var/installd/Library/Caches/com.apple.mobile.installd.staging/temp.kAmQY5/extracted/$(PRODUCT_MODULE_NAME).app/Frameworks/SwiftyJSON.framework/Info.plist, NSUnderlyingError=0x101a20460 {Error Domain=NSPOSIXErrorDomain Code=2 "No such file or directory"}}
Wed Nov 27 10:21:27 2019 [918] <err> (0x16f3ef000) -[MIBundle _extraInfoPlistLogging]: Failed to get list of extended attributes: Error Domain=NSPOSIXErrorDomain Code=2 "No such file or directory" UserInfo={SourceFileLine=1320, NSLocalizedDescription=Failed to open /private/var/installd/Library/Caches/com.apple.mobile.installd.staging/temp.kAmQY5/extracted/$(PRODUCT_MODULE_NAME).app/Frameworks/SwiftyJSON.framework/Info.plist: No such file or directory, FunctionName=-[MIFileManager extendedAttributesFromURL:error:]}
Wed Nov 27 10:21:27 2019 [918] <err> (0x16f3ef000) -[MIBundle _extraInfoPlistLogging]: Could not extract dictionary from /private/var/installd/Library/Caches/com.apple.mobile.installd.staging/temp.kAmQY5/extracted/$(PRODUCT_MODULE_NAME).app/Frameworks/SwiftyJSON.framework/Info.plist: Error Domain=NSCocoaErrorDomain Code=260 "The file “Info.plist” couldn’t be opened because there is no such file." UserInfo={NSFilePath=/private/var/installd/Library/Caches/com.apple.mobile.installd.staging/temp.kAmQY5/extracted/$(PRODUCT_MODULE_NAME).app/Frameworks/SwiftyJSON.framework/Info.plist, NSUnderlyingError=0x101a373e0 {Error Domain=NSPOSIXErrorDomain Code=2 "No such file or directory"}}
Wed Nov 27 10:21:27 2019 [918] <err> (0x16f3ef000) -[MIBundle _validateWithError:]: 128: Failed to load Info.plist from bundle at path /private/var/installd/Library/Caches/com.apple.mobile.installd.staging/temp.kAmQY5/extracted/$(PRODUCT_MODULE_NAME).app/Frameworks/SwiftyJSON.framework; Extra info about plist: ACL=<not found> 
Wed Nov 27 10:21:27 2019 [918] <err> (0x16f3ef000) -[MIInstaller performInstallationWithError:]: Preflight stage failed
`
let json = JSON(parseJSON: "{\"bug\":9.80}")
print(json["bug"].stringValue)
print(json["bug"].floatValue)

Print results
9.800000000000001
9.8

SwiftyJson Ver: 4.0 and 4.3
There was a typo in the README.MD file. I simply fixed the typo. It does not effect anything from the checklist below.

Checklist - While not every PR needs it, new features should consider this list:

 - [ ] Does this have tests?
 - [ ] Does this have documentation?
 - [ ] Does this break the public API (Requires major version bump)?
 - [ ] Is this a new feature (Requires minor version bump)?
### What did you do?
let json = JSON(["name":"Jack", "age": 25])
print(json)

### What did you expect to happen?
{
  "name" : "Jack",
  "age" : 25
}

### What actually happened instead?
build/checkouts/SwiftyJSON/Source/SwiftyJSON/SwiftyJSON.swift:1215:51: error: ambiguous use of operator '<'
    case (.number, .number): return lhs.rawNumber < rhs.rawNumber

### Environment

List the software versions you're using:

 - SwiftyJSON: *4.3.0*
- Swift version 5.1 (swift-5.1.2-RELEASE)
Target: x86_64-unknown-linux-gnu


Please also mention which package manager you used and its version. Delete the
other package managers in this list:
Swift Package Manager - Swift 5.1.0 (331fa5cb)

### Project that demonstrates the issue

Please link to a project we can download that reproduces the issue. Feel free
to delete this section if it's not relevant to the issue (eg - feature request).

The project should be [short, self-contained, and correct example](http://sscce.org/).
########################

{
    {
      "year" : "2012",
      "score" : 0.99997705221176147,
    },
    {
      "year" : "2018",
      "score" : 7.2979914875759277e-06,
    }
}

########################

this is what my JSON data look like,contains both scientific notation value and normal value at sametime.
would you please help me to solve "How I can get doubleValue without Scientific notation"?
like "0.99997705221176147" and "0.0000072979914875759277"

THX!

### What did you do?

Please replace this with what you did.

### What did you expect to happen?

Please replace this with what you expected to happen.

### What actually happened instead?

Please replace this with what happened instead.

### Environment

List the software versions you're using:

 - SwiftyJSON: *?.?.?*
 - Xcode Version: *?.? (????)* (Open Xcode; In menubar: Xcode > About Xcode)
 - Swift Version: *?.?* (Open Xcode Preferences; Components > Toolchains. If none, use `Xcode Default`.)

Please also mention which package manager you used and its version. Delete the
other package managers in this list:

 - Cocoapods: *?.?.?* (Use `pod --version` in Terminal)
 - Carthage: *?.?* (Use `carthage version` in Terminal)
 - Swift Package Manager *?.?.? (swiftpm-???)* (Use `swift build --version` in Terminal)

### Project that demonstrates the issue

Please link to a project we can download that reproduces the issue. Feel free
to delete this section if it's not relevant to the issue (eg - feature request).

The project should be [short, self-contained, and correct example](http://sscce.org/).
### What did you do?

Build a program that uses SwiftyJSON 5.0.0 as a dependency on Ubuntu 16.04

### What did you expect to happen?

Compile cleanly

### What actually happened instead?

Compilation failed:
```
.build/checkouts/SwiftyJSON/Source/SwiftyJSON/SwiftyJSON.swift:1215:51: error: ambiguous use of operator '<'
    case (.number, .number): return lhs.rawNumber < rhs.rawNumber
                                                  ^
.build/checkouts/SwiftyJSON/Source/SwiftyJSON/SwiftyJSON.swift:1251:6: note: found this candidate
func < (lhs: NSNumber, rhs: NSNumber) -> Bool {
     ^
Foundation.NSNumber:2:24: note: found this candidate
    public static func < (lhs: NSNumber, rhs: NSNumber) -> Bool
                       ^

```

### Environment

List the software versions you're using:

 - SwiftyJSON: 5.0.0
 - Linux Version: Ubuntu 16.04.6 LTS
 - Swift Version: Swift version 5.1 (swift-5.1-RELEASE) Target: x86_64-unknown-linux-gnu

Please also mention which package manager you used and its version. Delete the
other package managers in this list:

 - Swift Package Manager: Swift Package Manager - Swift 5.1.0 (790a0c9)

let json = JSON.init(parseJSON: "\\"aa\\"")
print(json.stringValue)
let json2 = JSON.init(parseJSON: "1")
print(json2.numberValue)

outputs: 
""
0

expected:
"aa"
1

How can I get expected values?
The parameter name `options` of rawString() is omitted

```
public func rawString(_ options: [writingOptionsKeys: Any]) -> String? {
```